phase 4; test suite